# habit-tracker

./: .dockerignore  .env.sample  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml
config/: celery.py  settings.py  urls.py
habits/: admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py
habits/tests/: test_models.py  test_serializers.py
telegram_bot/: admin.py  apps.py  bot.py  models.py  service.py  tasks.py  views.py
telegram_bot/handlers/: callbacks.py  commands.py  messages.py
telegram_bot/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
